[project]
name = "gemini-computer-use"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maximilian Wessendorf", email = "maxi-git@outlook.de"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
